restore python interpreter for futur use

--- a/{{ cookiecutter.repo_name }}/src/{{cookiecutter.project_name}}/cookiecutter-options.yml
+++ b/{{ cookiecutter.repo_name }}/src/{{cookiecutter.project_name}}/cookiecutter-options.yml
@@ -7,3 +7,6 @@ default_context:
     python_version: "{{ cookiecutter.python_version }}"
     tox_python_env: "{{ cookiecutter.tox_python_env }}"
     wsgi_server: "{{ cookiecutter.wsgi_server }}"
+    python_interpreter: "{{ cookiecutter.python_interpreter }}"
+
+
