--- a/{{ cookiecutter.repo_name }}/src/{{cookiecutter.project_name}}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/src/{{cookiecutter.project_name}}/requirements.txt
@@ -1,8 +1,13 @@
+# local package
+-e .
+
+
 marshmallow>=3
 flask
 flask-restful
 flask-migrate
 flask-sqlalchemy
+SQLAlchemy<1.4.0
 flask-marshmallow
 flask-jwt-extended
 marshmallow-sqlalchemy
