--- a/{{ cookiecutter.repo_name }}/src/{{cookiecutter.project_name}}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/src/{{cookiecutter.project_name}}/requirements.txt
@@ -22,3 +22,6 @@ uwsgi
 {%- if cookiecutter.wsgi_server == "gunicorn" %}
 gunicorn
 {%- endif %}
+{%- if cookiecutter.wsgi_server == "uvicorn" %}
+uvicorn[standard]
+{%- endif %}
