--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -1,5 +1,5 @@
 # app packages
--r ./{{cookiecutter.project_name}}/requirements.txt
+-r ./src/{{cookiecutter.project_name}}/requirements.txt
 
 # external requirements
 click
