work on api templating

--- a/{{ cookiecutter.project_name }}/requirements.txt
+++ b/{{ cookiecutter.project_name }}/requirements.txt
@@ -1,5 +1,5 @@
 # app packages
--r ./src/{{cookiecutter.project_name}}/requirements.txt
+-r src/application/requirements.txt
 
 # external requirements
 click
