--- a/{{ cookiecutter.project_name }}/src/application/docker-compose.yml
+++ b/{{ cookiecutter.project_name }}/src/application/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     env_file:
       - ./.flaskenv
     environment:
-      - DATABASE_URI=sqlite:////db_private/{{cookiecutter.app_name}}.db
+      - DATABASE_URI=sqlite:///{{cookiecutter.app_name}}/db_private/local.db
     volumes:
       - ./{{cookiecutter.app_name}}:/code/{{cookiecutter.app_name}}
       - ./db/:/db/
